<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ssYouTube</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="preferences">Preferences</string>
    <string name="app_version_format">v%1$s</string>
    <string name="appearance">Appearance</string>
    <string name="theme_system">System default</string>
    <string name="theme_light">Light mode</string>
    <string name="theme_dark">Dark mode</string>
    <string name="site_mode">Site mode</string>
    <string name="site_mode_mobile">Mobile site</string>
    <string name="site_mode_desktop">Desktop site</string>
    <string name="navigation">Navigation</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="close_miniplayer">Close miniplayer</string>
</resources>
